test/Test/Compile/Error/DatasetErrors/variableDimensions.vcl
network f : Nat -> Nat
dataset trainingDataset : Tensor Nat [f 0]